# PersonalProjects

./: README.md  main.py  poetry.toml  pyproject.toml  tweets.db
data/: content_format.json  news_articles.json  news_articles_new.json
models/: llm.py  tweet.py
pages/: 10_Index_Creator.py  1_Mortgage Calculator.py  1_Mortgage_Calculator.py  2_Chatbot.py  3_Multimodal_Query.py  4_Image_Generator.py  5_Tweet_Generator.py  6_Tweet_Dashboard.py  7_News_Retriever.py  8_Article_Generator.py  9_Finshots_scraper.py
utils/: api_client.py  api_config.py  db_handler.py  generate_prompt.py  load_json.py  post.py
widgets/: select_model.py  sidebar.py
