[project]
name = "personalprojects"
version = "0.1.0"
description = "A bunch small personal projects to satisfy my curiosity"
authors = [
    {name = "Bhasker Goel",email = "bhasker2000goel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.44.0,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
